{{$NEXT}}

0.47     2016-04-11

- Revert changes in 0.46 that required a recent Perl. This makes testing on
  Travis painful and makes it harder for others to contribute to any module of
  mine which uses this bundle.


0.46     2016-04-11

- Switched from [ExtraTests] to [RunExtraTests].

- Made the TidyAll plugin in this bundle rewrite existing tidyall.ini files to
  make sure we don't try to check or tidy generated xt tests.


0.45     2016-03-20

- Make sure generated Pod does not have trailing whitespace.

- Fix links to mailing lists to be "mailto:" links.


0.44     2016-03-20

- Make sure that all the Pod::Weaver-related modules that this distribution
  uses are added to the prereqs list.


0.43     2016-03-20

- Added [CheckChangesHasContent].

- Added [Test::CLeanNamespaces].

- If the distro has XS code [PPPort] is added and the generated ppport.h is
  copied from the build into the repo.

- This bundle now generates a CONTRIBUTING.md file automatically.

- Added a new Pod::Weaver author bundle that replaces the one-time generation
  of a weaver.ini file.

- Fixed README.md generation to happen after pod weaving, instead of before.


0.42     2016-02-01

- Disabled the Subroutines::ProhibitExplicitReturnUndef policy in the
  generated perlcriticrc file.


0.41     2016-01-29

- Added the Test::CPAN::Meta::JSON plugin.


0.40 2015-11-24

- Added a new plugin, DROLSKY::Git::CheckFor::CorrectBranch. This plugin only
  checks that the branch is correct on non-TRIAL releases.


0.39     2015-11-24

- Added a use_github_homepage config option.


0.38     2015-09-28

- Remove the RewriteVersion plugin and use my own version provider that simply
  reads the version from the main module. I don't want things appending '#
  TRIAL' comments to my version lines and un-tidying my code.


0.37     2015-08-15

- Include MojibakeTests plugin.


0.36     2015-07-12

- Don't include Test::Pod::LinkCheck and Test::Pod::No404s when running under Travis.


0.35     2015-07-05